--- a/runs/coensi1552.yaml
+++ b/runs/coensi1552.yaml
@@ -1121,6 +1121,7 @@ events:
   - {frame: [1702807, 1702844], label: W07, type: Korok Seed}
   - {frame: [1702965, 1703469], label: Hawa Koth Shrine, type: Warp}
   - {frame: [1703989, 1704553], label: Monya Toma Shrine, type: Warp}
+  - {frame: [1705990, 1705998], label: Leviathan Bros, type: Dialog, dialogId: Leviathan Bros}
   - {frame: [1706097, 1706683], label: Keo Ruug Shrine, type: Warp}
   - {frame: [1713984, 1714611], label: Ha Dahamar Shrine, type: Warp}
   - {frame: [1715295, 1715295], label: Memory Final, type: GG}
